Prevent google app engine from uploading full modules rather than zip modules.

--- a/app.yaml
+++ b/app.yaml
@@ -5,6 +5,21 @@ api_version: 1
 
 default_expiration: '365d'
 
+skip_files:
+- ^(.*/)?app\.yaml
+- ^(.*/)?app\.yml
+- ^(.*/)?index\.yaml
+- ^(.*/)?index\.yml
+- ^(.*/)?#.*#
+- ^(.*/)?.*~
+- ^(.*/)?.*\.py[co]
+- ^(.*/)?.*/RCS/.*
+- ^(.*/)?\..*
+- ^django/
+- ^djangoappengine/
+- ^djangotoolbox/
+- ^dbindexer/
+
 handlers:
 - url: /remote_api
   script: $PYTHON_LIB/google/appengine/ext/remote_api/handler.py
