Added minified js, works in ie, added cache helper.

--- a/app.yaml
+++ b/app.yaml
@@ -15,11 +15,16 @@ skip_files:
 - ^(.*/)?.*\.py[co]
 - ^(.*/)?.*/RCS/.*
 - ^(.*/)?\..*
+- ^media/
 - ^django/
 - ^djangotoolbox/
 - ^dbindexer/
 
 handlers:
+- url: /favicon.ico
+  static_files: static/img/favicon.ico
+  upload: static/img/favicon.ico
+
 - url: /remote_api
   script: $PYTHON_LIB/google/appengine/ext/remote_api/handler.py
   login: admin
