--- a/static/js/Makefile
+++ b/static/js/Makefile
@@ -1,6 +1,6 @@
 js: *.js
 	rm all.js
 	rm all-min.js
-	cat curvycorners.js jquery.countdown.js jquerycrash.js jquery-ui-1.8.5.custom.min.js main.js > all.js
+	cat jquery.countdown.js jquerycrash.js jquery-ui-1.8.5.custom.min.js main.js > all.js
 	java -jar /apps/crunchtime/tools/yuicompressor-2.4.2.jar all.js > all-min.js
 
